--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Finance Tracker</title>
     <link href="styles.css" rel='stylesheet'>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <div class="container">
@@ -58,6 +59,11 @@
                 <ul id="todo-list">
                 </ul>
             </div>
+        </div>
+
+        <div class="chart-container">
+            <h3>Expense Distribution</h3>
+            <canvas id="expenseChart"></canvas>
         </div>
     </div>
         
